2008-08-28  Evi Vanoost <vanooste@rcbi.rochester.edu>
	
	* util/pandora2ast: Pandora to Asterisk script. Check README for how to
	install it and use it

2008-08-28  Manuel Arostegui <marostegui@artica.es>

	* conf/pandora_server.conf: Fixed small typo.

2008-08-26  Sancho Lerena <slerena@artica.es>

	* pandora_*installer: Minimal fix creating cront task in installer

2008-08-25  Ramon Novoa  <rnovoa@artica.es>

	* bin/pandora_wmi: Check for wmic execution errors.

2008-08-24  Sancho Lerena <slerena@gmail.com>

	* pandora_package_installer: New script for install binary
	PandoraFMS servers precompiled with pp. 

	* pandora_recon: Added detection of Net::Traceroute::PurePerl
	to disable parent detection if dependencies not installed.

2008-08-22  Sancho Lerena <slerena@gmail.com>

	* Makefile.PL: Added WMI and fixed lot of small things.

	* pandora_server_installer: Fixed several things.

	* pandora_wmi: Launcher script added.

	* lib/PandoraFMS/Config.pm: Update version.

	* lib/PandoraFMS/DB.pm

	* lib/PandoraFMS/Tools.pm: Added defined check in limpia_cadena().
	This should fix warning message on some calls.

	* bin/pandora_snmpconsole: Fixed code for SNMP TRAP alerts.

2008-08-21  Sancho Lerena <slerena@gmail.com>

	* lib/PandoraFMS/DB.pm, bin/pandora_server: Enabled again 
	downtime scheduler. Now works fine, tested.

2008-08-07  Sancho Lerena <slerena@gmail.com>
	
	* bin/pandora_server: Disabled downtime server code until
	we can review changes in db structure from new code / console.

2008-08-05  Sancho Lerena <slerena@gmail.com>

	* bin/pandora_recon: New functional recon server. It implements 
	different recon tasks based on OS type. Uses a production/consumer
	thread model, detec OS typew and assign automatically network profiles
	(including new WMI components) and WMI, Plugin, Network and Prediction
	servers, taken the first master server that could found. Uses xprobe2
	external tool to detect remote OS.
